--- a/public/i18n/en.json
+++ b/public/i18n/en.json
@@ -75,7 +75,7 @@
     {
       "data": {
         "stringId": 304,
-        "text": "Total MOUSE burned since launch"
+        "text": "Total Snek burned since launch"
       }
     },
     {
@@ -123,13 +123,13 @@
     {
       "data": {
         "stringId": 320,
-        "text": "Stake LP tokens to earn MOUSE"
+        "text": "Stake LP tokens to earn Snek"
       }
     },
     {
       "data": {
         "stringId": 322,
-        "text": "Stake Mouse, get MOUSE."
+        "text": "Stake Snek, get Snek."
       }
     },
     {
@@ -153,19 +153,19 @@
     {
       "data": {
         "stringId": 334,
-        "text": "Every time you stake and unstake MOUSE tokens, the contract will automatically harvest MOUSE rewards for you!"
+        "text": "Every time you stake and unstake Snek tokens, the contract will automatically harvest Snek rewards for you!"
       }
     },
     {
       "data": {
         "stringId": 338,
-        "text": "The Sous Chef is cooking up a treat for all MOUSE holders"
+        "text": "The Sous Chef is cooking up a treat for all Snek holders"
       }
     },
     {
       "data": {
         "stringId": 340,
-        "text": "MOUSE Tokens Staked"
+        "text": "Snek Tokens Staked"
       }
     },
     {
@@ -177,7 +177,7 @@
     {
       "data": {
         "stringId": 344,
-        "text": "Stake your MOUSE to earn tokens of new projects."
+        "text": "Stake your Snek to earn tokens of new projects."
       }
     },
     {
@@ -219,7 +219,7 @@
     {
       "data": {
         "stringId": 358,
-        "text": "Mouse price"
+        "text": "Snek price"
       }
     },
     {
@@ -243,7 +243,7 @@
     {
       "data": {
         "stringId": 380,
-        "text": "1 MOUSE = 1 MOUSE"
+        "text": "1 Snek = 1 Snek"
       }
     },
     {
@@ -285,19 +285,19 @@
     {
       "data": {
         "stringId": 394,
-        "text": "Unstake MOUSE"
+        "text": "Unstake Snek"
       }
     },
     {
       "data": {
         "stringId": 400,
-        "text": "MOUSE holders proportionally split 25% of MOUSE block emissions each day (10 MOUSE per block), Rewards are distributed each block."
+        "text": "Snek holders proportionally split 25% of Snek block emissions each day (10 Snek per block), Rewards are distributed each block."
       }
     },
     {
       "data": {
         "stringId": 402,
-        "text": "Stake MOUSE to earn new tokens."
+        "text": "Stake Snek to earn new tokens."
       }
     },
     {
@@ -351,13 +351,13 @@
     {
       "data": {
         "stringId": 424,
-        "text": "%num% MOUSE"
+        "text": "%num% Snek"
       }
     },
     {
       "data": {
         "stringId": 426,
-        "text": "Spend MOUSE to buy tickets, contributing to the lottery pot. Ticket purchases end approx. 30 minutes before lottery. Win prizes if 2, 3, or 4 of your ticket numbers match the winning numbers and their positions! Good luck!"
+        "text": "Spend Snek to buy tickets, contributing to the lottery pot. Ticket purchases end approx. 30 minutes before lottery. Win prizes if 2, 3, or 4 of your ticket numbers match the winning numbers and their positions! Good luck!"
       }
     },
     {
@@ -435,19 +435,19 @@
     {
       "data": {
         "stringId": 454,
-        "text": "%num% MOUSE Available"
+        "text": "%num% Snek Available"
       }
     },
     {
       "data": {
         "stringId": 456,
-        "text": "Your amount must be a multiple of 10 MOUSE"
+        "text": "Your amount must be a multiple of 10 Snek"
       }
     },
     {
       "data": {
         "stringId": 458,
-        "text": "1 Ticket = 10 MOUSE"
+        "text": "1 Ticket = 10 Snek"
       }
     },
     {
@@ -495,7 +495,7 @@
     {
       "data": {
         "stringId": 478,
-        "text": "Ticket purchases are final. Your MOUSE cannot be returned to you after buying tickets."
+        "text": "Ticket purchases are final. Your Snek cannot be returned to you after buying tickets."
       }
     },
     {
@@ -507,7 +507,7 @@
     {
       "data": {
         "stringId": 482,
-        "text": "MOUSE prizes to be claimed"
+        "text": "Snek prizes to be claimed"
       }
     },
     {
@@ -543,13 +543,13 @@
     {
       "data": {
         "stringId": 494,
-        "text": "Approve MOUSE"
+        "text": "Approve Snek"
       }
     },
     {
       "data": {
         "stringId": 496,
-        "text": "MOUSE holders proportionally split 40% of MOUSE block emissions each day (10 MOUSE per block), Rewards are distributed each block."
+        "text": "Snek holders proportionally split 40% of Snek block emissions each day (10 Snek per block), Rewards are distributed each block."
       }
     },
     {
@@ -567,19 +567,19 @@
     {
       "data": {
         "stringId": 504,
-        "text": "You\u2019ll pay for the new tokens using MOUSE-BNB LP tokens, which means you need to stake equal amounts of MOUSE and BNB in a liquidity pool to take part."
+        "text": "You\u2019ll pay for the new tokens using Snek-BNB LP tokens, which means you need to stake equal amounts of Snek and BNB in a liquidity pool to take part."
       }
     },
     {
       "data": {
         "stringId": 506,
-        "text": "Get MOUSE-BNB LP >"
+        "text": "Get Snek-BNB LP >"
       }
     },
     {
       "data": {
         "stringId": 508,
-        "text": "The project gets the BNB, Mouse Farm burns the MOUSE."
+        "text": "The project gets the BNB, Snek Farm burns the Snek."
       }
     },
     {
@@ -597,7 +597,7 @@
     {
       "data": {
         "stringId": 514,
-        "text": "Launch your project with Mouse Farm, Binance Smart Chain\u2019s most-used AMM project and liquidity provider, to bring your token directly to the most active and rapidly growing community on BSC."
+        "text": "Launch your project with Snek Farm, Binance Smart Chain\u2019s most-used AMM project and liquidity provider, to bring your token directly to the most active and rapidly growing community on BSC."
       }
     },
     {
@@ -645,25 +645,25 @@
     {
       "data": {
         "stringId": 534,
-        "text": "Mouse Stats"
+        "text": "Snek Stats"
       }
     },
     {
       "data": {
         "stringId": 536,
-        "text": "Total MOUSE Supply"
+        "text": "Total Snek Supply"
       }
     },
     {
       "data": {
         "stringId": 538,
-        "text": "Total MOUSE Burned"
+        "text": "Total Snek Burned"
       }
     },
     {
       "data": {
         "stringId": 540,
-        "text": "New MOUSE\/block"
+        "text": "New Snek\/block"
       }
     },
     {
@@ -675,19 +675,19 @@
     {
       "data": {
         "stringId": 544,
-        "text": "MOUSE to Harvest"
+        "text": "Snek to Harvest"
       }
     },
     {
       "data": {
         "stringId": 546,
-        "text": "MOUSE in Wallet"
+        "text": "Snek in Wallet"
       }
     },
     {
       "data": {
         "stringId": 548,
-        "text": "Collecting MOUSE"
+        "text": "Collecting Snek"
       }
     },
     {
@@ -699,7 +699,7 @@
     {
       "data": {
         "stringId": 552,
-        "text": "MOUSE to Collect"
+        "text": "Snek to Collect"
       }
     },
     {
@@ -753,7 +753,7 @@
     {
       "data": {
         "stringId": 576,
-        "text": "Mouse Farm"
+        "text": "Snek Farm"
       }
     },
     {
@@ -765,7 +765,7 @@
     {
       "data": {
         "stringId": 580,
-        "text": "Stake MOUSE to earn new tokens."
+        "text": "Stake Snek to earn new tokens."
       }
     },
     {
@@ -783,7 +783,7 @@
     {
       "data": {
         "stringId": 586,
-        "text": "MOUSE to burn (USD)"
+        "text": "Snek to burn (USD)"
       }
     },
     {
@@ -795,7 +795,7 @@
     {
       "data": {
         "stringId": 590,
-        "text": "\u2b50\ufe0f Every time you stake and unstake LP tokens, the contract will automatically harvest MOUSE rewards for you!"
+        "text": "\u2b50\ufe0f Every time you stake and unstake LP tokens, the contract will automatically harvest Snek rewards for you!"
       }
     },
     {
@@ -813,13 +813,13 @@
     {
       "data": {
         "stringId": 596,
-        "text": "Buy MOUSE and BNB tokens"
+        "text": "Buy Snek and BNB tokens"
       }
     },
     {
       "data": {
         "stringId": 598,
-        "text": "Get MOUSE-BNB LP tokens by adding MOUSE and BNB liquidity"
+        "text": "Get Snek-BNB LP tokens by adding Snek and BNB liquidity"
       }
     },
     {
@@ -831,7 +831,7 @@
     {
       "data": {
         "stringId": 602,
-        "text": "While the sale is live, commit your MOUSE-LP tokens to buy the IFO tokens"
+        "text": "While the sale is live, commit your Snek-LP tokens to buy the IFO tokens"
       }
     },
     {
@@ -867,7 +867,7 @@
     {
       "data": {
         "stringId": 614,
-        "text": "Trade in for MOUSE, or keep for your collection!"
+        "text": "Trade in for Snek, or keep for your collection!"
       }
     },
     {
@@ -909,7 +909,7 @@
     {
       "data": {
         "stringId": 628,
-        "text": "When you trade in this NFT to receive MOUSE, you will lose access to it forever!"
+        "text": "When you trade in this NFT to receive Snek, you will lose access to it forever!"
       }
     },
     {
@@ -939,7 +939,7 @@
     {
       "data": {
         "stringId": 638,
-        "text": "Winners can trade in their NFTs for a MOUSE value until the expiry date written below. If you don't trade in your NFT by then, don\u2019t worry: you\u2019ll still keep it in your wallet!"
+        "text": "Winners can trade in their NFTs for a Snek value until the expiry date written below. If you don't trade in your NFT by then, don\u2019t worry: you\u2019ll still keep it in your wallet!"
       }
     },
     {
@@ -981,7 +981,7 @@
     {
       "data": {
         "stringId": 654,
-        "text": "Trade in for MOUSE"
+        "text": "Trade in for Snek"
       }
     },
     {
@@ -1107,7 +1107,7 @@
     {
       "data": {
         "stringId": 696,
-        "text": "Stake LP tokens to earn MOUSE"
+        "text": "Stake LP tokens to earn Snek"
       }
     },
     {
@@ -1149,13 +1149,13 @@
     {
       "data": {
         "stringId": 708,
-        "text": "The MOUSE Lottery"
+        "text": "The Snek Lottery"
       }
     },
     {
       "data": {
         "stringId": 710,
-        "text": "Buy tickets with MOUSE"
+        "text": "Buy tickets with Snek"
       }
     },
     {
@@ -1209,7 +1209,7 @@
     {
       "data": {
         "stringId": 10000,
-        "text": "Deposit Fee will be used to buyback MOUSE"
+        "text": "Deposit Fee will be used to buyback Snek"
       }
     },
     {
@@ -1221,7 +1221,7 @@
     {
       "data": {
         "stringId": 10002,
-        "text": "Stake tokens to earn MOUSE"
+        "text": "Stake tokens to earn Snek"
       }
     },
     {
